render flash messages if they are present

--- a/app/views/application/_mobile_page.html.haml
+++ b/app/views/application/_mobile_page.html.haml
@@ -3,6 +3,7 @@
     = mobile_tag header_options.merge(:role => 'header') do
       = yield :header
   = mobile_tag :role => 'content' do
+    = render 'flash', :flash => flash
     = yield
   - if content_for?(:footer)
     = mobile_tag footer_options.merge(:role => 'footer') do
