lazy accessors for options; extra_page, back_button_to

--- a/app/views/application/_mobile_page.html.haml
+++ b/app/views/application/_mobile_page.html.haml
@@ -2,9 +2,12 @@
   - if content_for?(:header)
     = mobile_tag header_options.merge(:role => 'header') do
       = yield :header
-  = mobile_tag :role => 'content' do
+  = mobile_tag content_options.merge(:role => 'content') do
     = render 'flash', :flash => flash
     = yield
   - if content_for?(:footer)
     = mobile_tag footer_options.merge(:role => 'footer') do
       = yield :footer
+
+- if content_for?(:extra_pages)
+  = yield :extra_pages
